--- a/Serverside RentApp/src/main/resources/application.properties
+++ b/Serverside RentApp/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 
 
 spring.jpa.properties.javax.persistence.validation.mode = auto
-spring.jpa.hibernate.ddl-auto = validate
+spring.jpa.hibernate.ddl-auto = update
 
 
